# Cinnarch-Software-Center

./: .bzrignore  Makefile.am  README.md  build.sh  configure.ac
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
data/: lsc-applications.menu
db-build/: Makefile.am  build.sh  dbbuild.vala  libmenu.vala
src/: Frontend.vala  Makefile.am  Utils.vala
src/Widgets/: Boxes.vala  Entries.vala  GridView.vala  InfoMessage.vala  Notebook.vala  PagesView.vala  ProgressInfo.vala  Toolbar.vala
src/Widgets/Pages/: AppsInfo.vala  AppsView.vala  CategoriesView.vala  HomePage.vala
